--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,31 +1,23 @@
 <%- include('partials/header') %>
 
-<div class="container py-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="card shadow border-danger">
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card border-danger">
         <div class="card-header bg-danger text-white">
-          <h3 class="card-title mb-0"><i class="fas fa-exclamation-triangle me-2"></i>Error</h3>
+          <h4 class="mb-0"><i class="fas fa-exclamation-triangle"></i> <%= error.status || 'Error' %> - <%= message %></h4>
         </div>
         <div class="card-body">
-          <h5 class="card-title"><%= message %></h5>
-          
-          <% if (process.env.NODE_ENV !== 'production' && typeof error !== 'undefined') { %>
-            <div class="alert alert-secondary mt-4">
-              <h6 class="alert-heading">Error Details:</h6>
-              <% if (error.stack) { %>
-                <pre class="mb-0"><%= error.stack %></pre>
-              <% } else { %>
-                <pre class="mb-0"><%= error %></pre>
-              <% } %>
+          <% if (process.env.NODE_ENV !== 'production' && error.stack) { %>
+            <div class="alert alert-secondary">
+              <h5>Stack Trace:</h5>
+              <pre><%= error.stack %></pre>
             </div>
+          <% } else { %>
+            <p>An error occurred while processing your request. Please try again later.</p>
           <% } %>
-          
-          <div class="mt-4">
-            <a href="/" class="btn btn-primary">
-              <i class="fas fa-home me-2"></i>Return to Home
-            </a>
-          </div>
+          <hr>
+          <a href="/" class="btn btn-primary">Back to Home</a>
         </div>
       </div>
     </div>
